--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ h1 {
     color: red; /* Mengatur warna teks judul menjadi merah */
 }
 
-/* ✅ NAVBAR */
+/* NAVBAR */
 .navbar {
     display: flex;
     align-items: center;
@@ -233,6 +233,9 @@ h2 {
 </div>
 
 <img src="AWARDS.png" alt="awards" class="award">
+
+  <h3>The Menu</h3>
+<img src="Menu Atlas Coffee.jpg" class="award">
 
 </body>
 
