--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html>
 <head>
   <link rel="icon" href="atlas_transparent-removebg-preview.png"> <!-- Menambahkan favicon di tab browser -->
@@ -234,7 +234,6 @@ h2 {
 
 <img src="AWARDS.png" alt="awards" class="award">
 
-  <h2>The Menu</h2>
 <img src="Menu Atlas Coffee.jpg" class="award">
 
 </body>
