--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-e<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <link rel="icon" href="atlas_transparent-removebg-preview.png"> <!-- Menambahkan favicon di tab browser -->
@@ -21,7 +21,7 @@ h1 {
     color: red; /* Mengatur warna teks judul menjadi merah */
 }
 
-/* NAVBAR */
+/* ✅ NAVBAR */
 .navbar {
     display: flex;
     align-items: center;
@@ -149,6 +149,13 @@ h2 {
 .award {
     margin: auto;
     margin: 100px;
+    align-content: center;
+}
+
+.menu {
+margin: auto;
+margin: 100px;
+padding-left: 45px;
 }
 
 /* CSS Footer */
@@ -233,8 +240,7 @@ h2 {
 </div>
 
 <img src="AWARDS.png" alt="awards" class="award">
-
-<img src="Menu Atlas Coffee.jpg" class="award">
+<img src="Menu Atlas Coffee.jpg" alt="atlas" class="menu">
 
 </body>
 
@@ -255,3 +261,4 @@ h2 {
         <h3> © 2019 Atlas Coffee. All rights reserved.</h3>
     </footer>
 </html>
+
