--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ h1 {
     color: red; /* Mengatur warna teks judul menjadi merah */
 }
 
-/* ✅ NAVBAR */
+/* NAVBAR */
 .navbar {
     display: flex;
     align-items: center;
